--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -27,6 +27,11 @@
             android:layout_height="6dp"
             android:background="@drawable/toolbar_shadow" />
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/help_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
     </FrameLayout>
 
 </LinearLayout>
