--- a/app/src/main/res/layout/fragment_image_view.xml
+++ b/app/src/main/res/layout/fragment_image_view.xml
@@ -9,20 +9,8 @@
     <ImageView
         android:id="@+id/view_image_iv_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="400dp"
         android:layout_centerVertical="true"
-        android:src="@drawable/standard_photo" />
-
-    <CheckBox
-        android:id="@+id/view_image_ch_likes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:button="@drawable/icon_like_white_selector"
-        android:paddingLeft="@dimen/margin_6"
-        android:textColor="@android:color/white"
-        android:textSize="@dimen/text_size_pre_normal" />
+        android:src="@drawable/test_img" />
 
 </RelativeLayout>
