--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackgroundLists"
+    android:orientation="vertical"
     tools:context=".screens.fragments.SearchComparesFragment">
 
     <android.support.v7.widget.RecyclerView
@@ -11,5 +12,11 @@
         android:layout_height="wrap_content"
         android:overScrollMode="never"
         android:scrollbars="vertical" />
+
+    <ProgressBar
+        android:id="@+id/progress_bar_search_compares"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
 
 </LinearLayout>
